--- a/css/base.css
+++ b/css/base.css
@@ -366,21 +366,21 @@ footer ul.sm-list li i { font-size: 0.9em; padding-top:0.35em }
 
 }
 
-@media only screen and (min-width:1280px)  {
+@media only screen and (width:1280px)  {
   #ini #rocket { width: 150% !important;  margin-left: -7em !important; margin-top: 7em !important}
   #ini #brain { width: 150% !important;  margin-left: -7em !important; margin-top: 5em !important}
   #ini #goal { width: 150% !important;  margin-left: -7em !important; margin-top: 7em !important}
   .thumbs .thumb { width:5.5em !important;}
 }
 
-@media only screen and (min-width:1440px)  {
+@media only screen and (width:1440px)  {
   #ini #rocket { width: 120% !important;  margin-left: -4em !important; margin-top: 6em !important}
   #ini #brain { width: 120% !important;  margin-left: -4em !important; margin-top: 4em !important}
   #ini #goal { width: 120% !important;  margin-left: -4em !important; margin-top: 6em !important}
   .thumbs .thumb { width:5.5em !important;}
 }
 
-@media only screen and (min-width:1600px)  {
+@media only screen and (width:1600px)  {
   #ini #rocket { width: 120% !important;  margin-left: -4em !important; margin-top: 6em !important}
   #ini #brain { width: 120% !important;  margin-left: -4em !important; margin-top: 4em !important}
   #ini #goal { width: 120% !important;  margin-left: -4em !important; margin-top: 6em !important}
