--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,6 @@
 /*-- Novanet Styles --*/
-body {color:#808285; font-family:'Fira Sans', sans-serif; display: flex; flex-wrap: wrap;}
-.container { display:flex; flex-wrap:wrap; box-sizing: border-box; background:url(../img/bg.svg)}
+body {color:#808285; font-family:'Fira Sans', sans-serif; display: flex; flex-wrap: wrap; background:url(../img/bg.svg)}
+.container { display:flex; flex-wrap:wrap; box-sizing: border-box;}
 a {text-decoration:none}
 ul li {list-style:none; text-align:center}
 table {border-collapse:separate; border-spacing:0; vertical-align:middle}
